--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "1.0.0",
   "description": "AI-powered 3D model and laser cutting generator for makers",
   "type": "module",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "dev:all": "concurrently \"npm run dev\" \"cd server && npm run dev\"",
-    "install:all": "npm install && cd server && npm install"
+    "install:all": "npm install && cd server && npm install",
+    "electron:dev": "concurrently \"npm run dev\" \"cd server && npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run build && cd server && npm run build && cd .. && electron-builder",
+    "package:win": "npm run build && cd server && npm run build && cd .. && electron-builder --win --x64"
   },
   "keywords": ["3d-printing", "laser-cutting", "ai", "openscad", "makers"],
   "author": "Maria Fe Fischer",
@@ -27,6 +31,47 @@
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "electron": "^33.3.1",
+    "electron-builder": "^25.1.8",
+    "wait-on": "^8.0.1"
+  },
+  "build": {
+    "appId": "com.makersai.studio",
+    "productName": "MakersAI Studio",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "server/dist/**/*",
+      "server/data/.gitkeep",
+      "server/node_modules/**/*",
+      "public/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "server/dist",
+        "to": "server/dist"
+      },
+      {
+        "from": "server/node_modules",
+        "to": "server/node_modules"
+      }
+    ],
+    "win": {
+      "target": ["nsis", "portable"],
+      "icon": "public/favicon.svg"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
+    "portable": {
+      "artifactName": "MakersAI-Studio-Portable-${version}.exe"
+    }
   }
 }
