--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": ["3d-printing", "ai", "openscad", "api"],
   "author": "",
@@ -31,7 +33,12 @@
     "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.8.2",
     "eslint": "^9.18.0",
