--- a/server/package.json
+++ b/server/package.json
@@ -13,37 +13,43 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["3d-printing", "ai", "openscad", "api"],
+  "keywords": [
+    "3d-printing",
+    "ai",
+    "openscad",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@google/genai": "^1.29.0",
+    "@types/multer": "^2.0.0",
+    "better-sqlite3": "^11.8.1",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "cors": "^2.8.5",
     "helmet": "^8.0.0",
-    "dotenv": "^16.4.7",
-    "zod": "^3.24.1",
-    "compression": "^1.7.5",
-    "better-sqlite3": "^11.8.1",
-    "node-cache": "^5.1.2"
+    "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.8.2",
-    "eslint": "^9.18.0",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0"
+    "typescript": "^5.8.2"
   }
 }
-
