--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,13 @@ lerna-debug.log*
 
 # Database
 *.db
+*.db-shm
+*.db-wal
 *.sqlite
 *.sqlite3
 server/data/*.db
+server/data/*.db-shm
+server/data/*.db-wal
 
 # Cache
 .cache
